# PythonAutomatedTesting

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tests_report.html  tox.ini
.github/actions/post-workflow-recovery/: action.yml
.github/workflows/: branchname.yml  extract-branch.yaml  interactive-inputs.yaml  tests.yml
html_report/: tests_report.html
src/slapping/: slap_that_like_button.py
src/utils/: gpu.py
tests/: conftest.py  test_slapping.py
tests/gpu/: conftest.py  test_gpu.py
