[metadata]
name = slapping
description = slap that like button
long_description = file: README.md
long_description_content_type = text/markdown
author = Théo Couard
license = GPL-3.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    utils
    slapping
install_requires =
    requests>=2
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=3.9
    mypy>=0.910
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24

[options.package_data]
slapping = py.typed
utils = py.typed

[flake8]
max-line-length = 160

[pytest]
generate_report_on_test = True
